# Smart-Route-Project

./: .editorconfig  .env  README.md  build.gradle.kts  dependencies.txt  exportJsonfirebase.docx  gradle.properties  msgpack-1.1.0-cp38-cp38-win_amd64.whl  pyproject.toml  settings.gradle.kts
app/: build.gradle.kts  google-services.json  requirements.txt
app/src/debug/: google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/python/: config.py  initialize_firestore.py  requirements.txt  serviceAccountKey.json
gradle/: libs.versions.toml
gradle/wrapper/: build.gradle.kts  gradle-wrapper.properties
oci-python-sdk-2.143.1/oci-python-sdk/docs/: .buildinfo  backward-compatibility.html  configuration.html  contributions.html  deprecation-notice.html  exceptions.html  feedback.html  fips-libraries.html  forward-compatibility.html  index.html  installation.html  known-issues.html  license.html  logging.html  new-region-support.html  notifications.html  objects.inv  pagination.html  parallel-ops.html  pass-explicit-null.html  py-modindex.html  quickstart.html  raw-requests.html  sdk-with-proxy.html  search.html  upload-manager.html  waiters.html
oci-python-sdk-2.143.1/oci-python-sdk/docs/_static/: documentation_options.js
oci-python-sdk-2.143.1/oci-python-sdk/docs/api/: access_governance_cp.html  adm.html  ai_anomaly_detection.html  ai_document.html  ai_language.html  ai_speech.html  ai_vision.html  analytics.html  announcements_service.html  apigateway.html  apm_config.html  apm_control_plane.html  apm_synthetics.html  apm_traces.html  artifacts.html  (+144 more)
(+13306 files in other folders)
